client/src/All.css
.mobile-all {
  /* display: flex;
  flex-direction: column; */
  height: 600px;
  width: 500px;
  margin-bottom: 1rem;
}

.anchor-image {
  display: contents !important;
  cursor: pointer;
}

a.no-red-bar::after {
  content: none !important;
  transition: none !important;
}

.modal {
  padding: 0 !important;
  background-color: rgba(50, 50, 50, 0.477) !important;
}

/* Modal Content/Box */
.modal-content {
  background-color: #32323282;
  margin: 15% auto; /* 15% from the top and centered */
  padding: 0 !important;
  /* border: 1px solid #888; */
  width: 100%; /* Could be more or less, depending on screen size */
}

/* The Close Button */
.close {
  color: #aaa;
  float: right;
  font-size: 28px;
  font-weight: bold;
}

.close:hover,
.close:focus {
  color: black;
  text-decoration: none;
  cursor: pointer;
}

.modal-image-resize {
  width: 700px;
  height: 800px;
}

.cube-image {
}

